--- a/pokemon-finder/src/PokemonSearch.css
+++ b/pokemon-finder/src/PokemonSearch.css
@@ -1,6 +1,7 @@
 /* src/PokemonSearch.css */
 .search-form {
     display: flex;
+    font-family: 'Fira Code', monospace;
     justify-content: center;
     margin-bottom: 20px;
   }
@@ -8,6 +9,7 @@
   .search-input {
     padding: 10px;
     width: 60%;
+    font-family: 'Fira Code', monospace;
     border: 1px solid #bdc3c7;
     border-radius: 5px;
     margin-right: 10px;
@@ -15,6 +17,7 @@
   
   .search-button {
     padding: 10px 20px;
+    font-family: 'Fira Code', monospace;
     background-color: #e67e22;
     color: white;
     border: none;
@@ -25,5 +28,6 @@
   
   .search-button:hover {
     background-color: #d35400;
+    font-family: 'Fira Code', monospace;
   }
   
